<resources>
    <string name="app_name">OnlineExam</string>
    <string name="title_activity_admin_navigation_draver">AdminNavigationDraver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_assessor">Assessor</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_baches">Batches</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_location">Location</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_assessment">Assessment</string>
    <string name="menu_result">Result</string>
    <string name="menu_costperassessment">Cost Per Assessment</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_treningresorces">Training Resorces</string>
    <string name="menu_questionpaper">Question Paper</string>
    <string name="menu_treningcenter">Training Center</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>